[project]
name = "test02"
version = "0.1.0"
description = "A collection of scripts for Google Cloud Vertex AI and Natural Language processing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk",
    "google-cloud-language>=2.20.0",
    "google-genai>=1.70.0",
    "pyopenssl>=26.0.0",
]
